--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "rip-site",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.0.18",
+    "astro": "^2.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.7"
   }
 }
